--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Plants Shop</title>
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/0d2aff3f7f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./scss/style.css">
 </head>
+
 <body>
     <!-- HEADER -->
     <header class="header" id="header">
@@ -43,7 +45,7 @@
             </div>
 
             <div class="nav__btns">
-                <i class="fa-solid fa-moon change-theme " id="theme-button" ></i>
+                <i class="fa-solid fa-moon change-theme " id="theme-button"></i>
 
                 <div class="nav__toggle" id="nav-toggle">
                     <i class="fa-solid fa-bars"></i>
@@ -67,7 +69,7 @@
                         실내에서 식물을 키우면 식물의 공기정화 능력을 통해 공기의 질을 개선, 온습도 조절, 심미적 효과까지 다양한 순기능을 기대해보세요
                     </p>
                     <a href="#about" class="button button--flex">
-                       Wood stand <i class="fa-solid fa-arrow-right button__icon"></i>
+                        Wood stand <i class="fa-solid fa-arrow-right button__icon"></i>
                     </a>
                 </div>
 
@@ -115,7 +117,7 @@
                         </p>
                         <p class="about__details-description">
                             <i class="fa-solid fa-square-check about__details-icon"></i>
-                            오랜 노하우로 건강한 식물을 가장 안전하게 배송 
+                            오랜 노하우로 건강한 식물을 가장 안전하게 배송
                         </p>
                         <p class="about__details-description">
                             <i class="fa-solid fa-square-check about__details-icon"></i>
@@ -159,7 +161,7 @@
                         <div class="steps__card-number">03</div>
                         <h3 class=" steps__card-title">몇 주마다 한 번씩 비료를 주세요</h3>
                         <p class="steps__card-description">
-                          비료는 식물에게 영양분을 공급해주는 토양 첨가제입니다.
+                            비료는 식물에게 영양분을 공급해주는 토양 첨가제입니다.
                         </p>
                     </div>
                 </div>
@@ -265,7 +267,8 @@
 
                         <div class="questions__content">
                             <p class="questions__description">
-                                본인이 기르는 식물이 햇빛을 얼마나 쬐야 하는지 확인하세요. 필요한 일조량에 맞게 적당한 곳으로 옮기세요. 남향 창문이 햇빛을 가장 많이 받고 북향 창문이 햇빛을 가장 적게 받는다는 점을 유념하세요.
+                                본인이 기르는 식물이 햇빛을 얼마나 쬐야 하는지 확인하세요. 필요한 일조량에 맞게 적당한 곳으로 옮기세요. 남향 창문이 햇빛을 가장 많이 받고 북향 창문이
+                                햇빛을 가장 적게 받는다는 점을 유념하세요.
                             </p>
                         </div>
                     </div>
@@ -280,7 +283,8 @@
 
                         <div class="questions__content">
                             <p class="questions__description">
-                                손가락을 2마디 정도 넣어서 흙이 얼마나 축축한지 확인하세요. 손가락을 다시 뺏을 때 건조할 경우 물을 줘야 합니다. 만약 손가락이 완전 젖었다면 하루 또는 이틀 동안 물을 주지 마세요.
+                                손가락을 2마디 정도 넣어서 흙이 얼마나 축축한지 확인하세요. 손가락을 다시 뺏을 때 건조할 경우 물을 줘야 합니다. 만약 손가락이 완전 젖었다면 하루 또는
+                                이틀 동안 물을 주지 마세요.
                             </p>
                         </div>
                     </div>
@@ -312,7 +316,8 @@
 
                         <div class="questions__content">
                             <p class="questions__description">
-                                식물 뿌리가 흙 표면과 가까워야지 표토에 있는 모든 영양분을 흡수하고 햇빛을 받을 수 있습니다. 조심스럽게 식물을 흙 밖으로 파낸 뒤 뿌리 덩어리가 흙 표면에(또는 바로 밑에) 묻히게끔 다시 심으세요.
+                                식물 뿌리가 흙 표면과 가까워야지 표토에 있는 모든 영양분을 흡수하고 햇빛을 받을 수 있습니다. 조심스럽게 식물을 흙 밖으로 파낸 뒤 뿌리 덩어리가 흙
+                                표면에(또는 바로 밑에) 묻히게끔 다시 심으세요.
                             </p>
                         </div>
                     </div>
@@ -327,7 +332,8 @@
 
                         <div class="questions__content">
                             <p class="questions__description">
-                                잡초는 보기에도 안 좋을 뿐 아니라 식물이 자랄 수 있는 소중한 공간을 차지하고 흙 속에 있는 영양분을 뺏어갑니다. 잡초가 자란 걸 발견할 때마다 잡초를 뽑으세요.
+                                잡초는 보기에도 안 좋을 뿐 아니라 식물이 자랄 수 있는 소중한 공간을 차지하고 흙 속에 있는 영양분을 뺏어갑니다. 잡초가 자란 걸 발견할 때마다 잡초를
+                                뽑으세요.
                             </p>
                         </div>
                     </div>
@@ -342,7 +348,8 @@
 
                         <div class="questions__content">
                             <p class="questions__description">
-                                뿌리 덮개를 사용하면 영양분을 추가로 공급하고 잡초를 억제할 수 있다는 장점이 있지만 너무 많이 사용할 경우 정원에 문제가 발생할 수 있습니다. 왜냐하면 뿌리 덮개는 잡초만 억제하는 게 아니라 흙 표면 위를 뚫고 올라오는 식물의 새로운 성장을 방해하기 때문입니다.
+                                뿌리 덮개를 사용하면 영양분을 추가로 공급하고 잡초를 억제할 수 있다는 장점이 있지만 너무 많이 사용할 경우 정원에 문제가 발생할 수 있습니다. 왜냐하면 뿌리
+                                덮개는 잡초만 억제하는 게 아니라 흙 표면 위를 뚫고 올라오는 식물의 새로운 성장을 방해하기 때문입니다.
                             </p>
                         </div>
                     </div>
@@ -356,7 +363,7 @@
             <div class="contact__container grid">
                 <div class="contact__box">
                     <h2 class="section__title">
-                       궁금한게 있으시면<br>언제든<br>문의해주세요. 
+                        궁금한게 있으시면<br>언제든<br>문의해주세요.
                     </h2>
                     <div class="contact__data">
                         <div class="contact__information">
@@ -390,7 +397,7 @@
                         </div>
 
                         <div class="contact__content contact__area">
-                            <textarea name="message" placeholder=" " class="contact__input"></textarea>                              
+                            <textarea name="message" placeholder=" " class="contact__input"></textarea>
                             <label for="" class="contact__label">Message</label>
                         </div>
                     </div>
@@ -441,7 +448,7 @@
 
                     <ul class="footer__data">
                         <li class="footer__information">+999 888 777</li>
-                        
+
                         <div class="footer__social">
                             <a href="https://www.facebook.com/" class="footer__social-link">
                                 <i class="fa-brands fa-facebook-f"></i>
@@ -472,7 +479,7 @@
         </footer>
         <!-- END FOOTER -->
 
-        <a href="#" class="scrollup" id="scroll-up"> 
+        <a href="#" class="scrollup" id="scroll-up">
             <i class="fa-solid fa-arrow-up scrollup__icon"></i>
         </a>
     </main>
@@ -482,4 +489,5 @@
     <!-- main js -->
     <script src="./assets/js/main.js"></script>
 </body>
+
 </html>
